Fixed mobile navbar bug, Added some overflows to modal related elements

--- a/assets/src/scss/_settings.scss
+++ b/assets/src/scss/_settings.scss
@@ -289,6 +289,7 @@ $notifications: (
 */
 
 $navBar: (
+    mq                : gamma-and-up,
     bg-color          : #222222,
     trigger-bg-color  : #222222,
     trigger-float     : right,
